update view/controller clicks

--- a/chatterbox.html
+++ b/chatterbox.html
@@ -21,13 +21,13 @@
       }
     </script>
   </head>
-  <body>
+  <body>yeahhh boiiiiii
     <div id="main">
       <h1>chatterbox</h1>
       <div class="spinner"><img src="client/images/spiffygif_46x46.gif"></div>
       <div id="rooms">
         Room:
-        <select id="'roomSelector"></select>
+        <select id="roomSelector"></select>
         <button>Add Room</button>
       </div>
       <form action="#" id="send" method="post">
